bitfields/tests/compile_error_cases/errors/bitfield_usize_field_without_bits.stderr
error: The `isize` and `usize` types are not supported, we cannot guarantee their size at runtime. Switch to a sized integer type like `u8`, `i16`, etc.,
 --> tests/compile_error_cases/errors/bitfield_usize_field_without_bits.rs:5:8
  |
5 |     a: usize,
  |        ^^^^^
